// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.google.cloud.sqlcommenter.grpc.stubs;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

// This is the request message
message StudentRequest{
  string student_id = 1;
}

// This is the response message
message StudentResponse{
  string student_id = 1;
  string name = 2;
  int32 age = 3;
}

// Now let's define our service
service StudentService{
  rpc getStudentInfo(StudentRequest) returns (StudentResponse);
}